--- a/CHIPSApp/res/layout/favorites.xml
+++ b/CHIPSApp/res/layout/favorites.xml
@@ -1,32 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
-    <LinearLayout
-    	android:id="@+id/buttons"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_alignParentBottom="true">
-        
-    	<ImageButton
-        	android:id="@+id/saveButton"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:layout_gravity="center_horizontal"
-        	android:layout_weight="1"
-        	android:background="@android:color/transparent"
-        	android:src="@drawable/save_button" />
-    
-    </LinearLayout>
     
 <ScrollView
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
-android:layout_above="@id/buttons" >
+android:layout_weight="1">
 
 	<LinearLayout
 	android:layout_width="match_parent"
@@ -92,5 +73,24 @@ android:layout_above="@id/buttons" >
     </LinearLayout>
 </ScrollView>
  
+    <LinearLayout
+    	android:id="@+id/buttons"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_alignParentBottom="true">
         
-</RelativeLayout>
+    	<ImageButton
+        	android:id="@+id/saveButton"
+        	android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:layout_gravity="center_horizontal"
+        	android:layout_weight="1"
+        	android:background="@android:color/transparent"
+        	android:src="@drawable/save_button" />
+    
+    </LinearLayout>
+
+        
+</LinearLayout>
