--- a/CHIPSApp/res/layout/add_food_to_inventory.xml
+++ b/CHIPSApp/res/layout/add_food_to_inventory.xml
@@ -4,13 +4,13 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
+    <LinearLayout android:layout_width="match_parent" android:orientation="horizontal" android:layout_height="wrap_content" android:gravity="center" android:layout_weight="0" android:id="@+id/TopButtonGroup">
+        <ImageButton android:src="@drawable/search_button" android:onClick="searchFoodClicked" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/searchButton"></ImageButton>
+        <ImageButton android:src="@drawable/scan_button" android:onClick="scanBarcodeClicked" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/scanButton"></ImageButton>
+    </LinearLayout>
 
     <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
 	    <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:id="@+id/addFoodToInventoryItemGroup" android:layout_weight="1" android:layout_width="match_parent">
-	        <LinearLayout android:layout_weight="0" android:id="@+id/LinearLayout01" android:layout_width="match_parent" android:orientation="horizontal" android:layout_height="wrap_content" android:gravity="center">
-	            <ImageButton android:src="@drawable/search_button" android:onClick="searchFoodClicked" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ImageButton03" android:layout_weight="1"></ImageButton>
-	            <ImageButton android:src="@drawable/scan_button" android:onClick="scanBarcodeClicked" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ImageButton02" android:layout_weight="1"></ImageButton>
-	        </LinearLayout>
 	        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0" android:id="@+id/foodNameTextView" android:text="@string/foodNameTextViewTitle"></TextView>
 	        <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0" android:id="@+id/newFoodNameEditText"></EditText>
 	        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0" android:id="@+id/caloriesTextView" android:text="@string/caloriesTextViewTitle"></TextView>
